chore(lighthouse): ensure text remains visible during webfont load

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,10 @@
 
 @font-face {
   font-family: "Rubik Moonrocks";
+  font-style: normal;
+  font-weight: 400;
   src: url(assets/fonts/RubikMoonrocks-Regular.ttf) format("truetype");
+  font-display: swap;
 }
 
 html {
